<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fifa_user2"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/player_Img"
        android:layout_width="148dp"
        android:layout_height="161dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="119dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/club_trans"
        app:srcCompat="@drawable/messi" />

    <TextView
        android:id="@+id/playerName"
        android:layout_width="130dp"
        android:layout_height="41dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="17dp"
        android:gravity="center"
        android:text="Leo Messi"
        android:textColor="#009688"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/club_trans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/club_trans"
        android:layout_width="136dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/messi_transf" />

    <TextView
        android:id="@+id/interested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="52dp"
        android:text="Interested :"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/interested_data"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nationality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="21dp"
        android:text="@string/nationality"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toStartOf="@+id/nationality_data"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="16dp"
        android:text="Position : "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/foot"
        app:layout_constraintEnd_toStartOf="@+id/position_data"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="18dp"
        android:text="@string/age"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nationality"
        app:layout_constraintEnd_toStartOf="@+id/age_data"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="12dp"
        android:text="@string/contract_until"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/position"
        app:layout_constraintEnd_toStartOf="@+id/contract_data"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/foot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="19dp"
        android:text="Foot :"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/current_club"
        app:layout_constraintEnd_toStartOf="@+id/foot_data"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/current_club"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="13dp"
        android:text="Current Club :"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/interested"
        app:layout_constraintEnd_toStartOf="@+id/current_data"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="21dp"
        android:text="@string/date_of_birth"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintEnd_toStartOf="@+id/date_data"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="17dp"
        android:text="Height :"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contract"
        app:layout_constraintEnd_toStartOf="@+id/height_data"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="21dp"
        android:text="June 24, 1987 "
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/age_data"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/age_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="18dp"
        android:text="@string/_36"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/nationality_data"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/nationality_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="21dp"
        android:text="@string/argentine"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/height_data"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/height_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="17dp"
        android:text="1.7 m "
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/contract_data"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/contract_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="12dp"
        android:text="@string/_2025"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/position_data"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/position_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="16dp"
        android:text="Center Forward"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/foot_data"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/foot_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="19dp"
        android:text="Left"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/current_data"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/current_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="13dp"
        android:text="@string/barcelona_club"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/interested_data"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/interested_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="52dp"
        android:text="Inter Miami"
        android:textColor="#009688"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>